--- a/usbSerialExamples/src/main/res/layout/fragment_terminal.xml
+++ b/usbSerialExamples/src/main/res/layout/fragment_terminal.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,112 +14,119 @@
             android:id="@+id/remoteTimeLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="10pt"
+            android:paddingEnd="10pt"
+            android:text="@string/_5l_time"
             android:textColor="@android:color/secondary_text_dark"
-            android:paddingRight="10pt"
-            android:textSize="30sp"
-            android:text="5L Time" />
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/remoteTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="10pt"
+            android:paddingEnd="10pt"
+            android:text="@string/time"
             android:textColor="@android:color/secondary_text_dark"
-            android:textSize= "30sp"
-            android:paddingRight="10pt"
-            android:text="00:00:00" />
+            android:textSize="30sp" />
 
     </LinearLayout>
-
+    <!--Control Lines (test mode)-->
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="638dp"
+        android:layout_height="62dp"
         android:orientation="horizontal">
 
         <ToggleButton
             android:id="@+id/controlLineTest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="30sp"
-
-
-            android:textOff="Test"
-            android:textOn="Test" />
+            android:minWidth="@dimen/minWidth"
+            android:textSize="@dimen/ModeText"
+            android:clickable="true"
+            android:textOff="@string/test"
+            android:textOn="@string/test" />
 
         <ToggleButton
             android:id="@+id/controlLineHigh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="30sp"
-            android:clickable="false"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textOff="High"
-            android:textOn="High" />
-
+            android:background="@drawable/square_button"
+            android:minWidth="@dimen/minWidth"
+            android:textSize="@dimen/ModeText"
+            android:clickable="true"
+            android:textOff="@string/high"
+            android:textOn="@string/high"/>
 
 
         <View
-            android:layout_height="match_parent"
-            android:layout_width="6dp" />
+            android:layout_width="6dp"
+            android:layout_height="match_parent" />
 
         <ToggleButton
             android:id="@+id/controlLineLow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="30sp"
+            android:minWidth="@dimen/minWidth"
             android:textOff="Low"
-            android:textOn="High" />
+            android:textOn="Low"
+            android:textSize="@dimen/ModeText" />
 
         <ToggleButton
             android:id="@+id/controlLineAlarm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:minWidth="30sp"
+            android:clickable="true"
+            android:minWidth="@dimen/minWidth"
             android:textColor="@android:color/secondary_text_dark"
             android:textOff="Alarm"
-            android:textOn="Alarm" />
+            android:textOn="Alarm"
+            android:textSize="@dimen/ModeText" />
 
         <View
-            android:layout_height="match_parent"
-            android:layout_width="6dp" />
+            android:layout_width="6dp"
+            android:layout_height="match_parent" />
 
         <ToggleButton
             android:id="@+id/controlLineCl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="false"
-            android:minWidth="30sp"
+            android:minWidth="@dimen/minWidth"
             android:textColor="@android:color/secondary_text_dark"
             android:textOff="CL"
-            android:textOn="CL" />
+            android:textOn="CL"
+            android:textSize="@dimen/ModeText" />
 
         <ToggleButton
             android:id="@+id/controlLineWm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="30sp"
             android:clickable="false"
+            android:minWidth="@dimen/minWidth"
             android:textColor="@android:color/secondary_text_dark"
             android:textOff="WM"
-            android:textOn="WM" />
+            android:textOn="WM"
+            android:textSize="@dimen/ModeText" />
 
     </LinearLayout>
+    <!--List Divider-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="?android:attr/listDivider" />
+    <!--Mode Radio Group-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="?android:attr/listDivider" />
 
-    <View
-        android:layout_width="match_parent"
-        android:background="?android:attr/listDivider"
-        android:layout_height="2dp" />
-    <View
-        android:layout_width="match_parent"
-        android:background="?android:attr/listDivider"
-        android:layout_height="2dp" />
     <RadioGroup
         android:id="@+id/_mode"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:visibility="visible"
-        android:orientation="horizontal">
-
+        android:orientation="horizontal"
+        android:visibility="visible">
 
         <RadioButton
             android:id="@+id/bOFF"
@@ -132,33 +139,31 @@
             android:id="@+id/bANR"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="30sp"
+            android:minWidth="@dimen/minWidth"
             android:text="ANR" />
 
         <RadioButton
             android:id="@+id/bSPY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="30sp"
+            android:minWidth="@dimen/minWidth"
             android:text="Spray" />
 
         <RadioButton
             android:id="@+id/bdrip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="30sp"
+            android:minWidth="@dimen/minWidth"
             android:text="Drip" />
 
         <RadioButton
             android:id="@+id/bdemand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="30sp"
+            android:minWidth="@dimen/minWidth"
             android:text="Demand" />
-
-
     </RadioGroup>
-
+    <!--Solenoids -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -168,53 +173,54 @@
             android:id="@+id/_fieldFlush"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
+            android:justificationMode="none"
             android:paddingRight="10pt"
-            android:text="Field Flush" />
+            android:text="Field Flush"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/_recirculate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="20pt"
-            android:textSize="20sp"
+            android:text="Recirculate"
             android:textColor="@android:color/secondary_text_dark"
-            android:text="Recirculate" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/_peristalic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
             android:paddingRight="10pt"
-            android:text="Peristalic" />
+            android:text="Peristalic"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/_effpump1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="10pt"
+            android:text="Eff Pump"
             android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
-            android:text="Eff Pump" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/_effpump2"
             android:layout_width="wrap_content"
-            android:paddingRight="10pt"
             android:layout_height="wrap_content"
+            android:paddingRight="10pt"
+            android:text="Alt Pump"
             android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
-            android:text="Alt Pump" />
-
+            android:textSize="20sp" />
     </LinearLayout>
-
+    <!--Input Signals-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/_bhigh"
             android:layout_width="wrap_content"
@@ -223,6 +229,11 @@
             android:text="High"
             android:textColor="@android:color/secondary_text_dark"
             android:textSize="20sp" />
+
+        <View
+            android:layout_width="6dp"
+            android:layout_height="match_parent" />
+
         <TextView
             android:id="@+id/_balarm"
             android:layout_width="wrap_content"
@@ -231,34 +242,43 @@
             android:text="Extn Alarm"
             android:textColor="@android:color/secondary_text_dark"
             android:textSize="20sp" />
+
         <TextView
             android:id="@+id/_blow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
             android:paddingRight="10pt"
-            android:text="Low" />
+            android:text="Low"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
+
+        <View
+            android:layout_width="6dp"
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/_bcl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="10pt"
+            android:text="Chlorine"
             android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
-            android:text="Chlorine" />
+            android:textSize="20sp" />
+
+        <View
+            android:layout_width="6dp"
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/_bwm"
             android:layout_width="wrap_content"
-            android:paddingRight="10pt"
             android:layout_height="wrap_content"
+            android:paddingRight="10pt"
+            android:text="Water Meter "
             android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
-            android:text="Water Meter " />
-     </LinearLayout>
-
+            android:textSize="20sp" />
+    </LinearLayout>
+    <!--pumps and counts-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -268,58 +288,101 @@
             android:id="@+id/_effluentlabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
             android:paddingRight="10pt"
-            android:text="Effluent Cycles" />
+            android:text="Effluent Cycles"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/_effluentcount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
             android:paddingRight="10pt"
-            android:text="0" />
+            android:text="0"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/_pumprunlabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
             android:paddingRight="10pt"
-            android:text="Pump Runtime" />
+            android:text="Pump Runtime"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/_pumprun"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
             android:paddingRight="10pt"
-            android:text="0" />
+            android:text="0"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/_airpressuelabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
             android:paddingRight="10pt"
-            android:text="Air Pressure" />
+            android:text="Air Pressure"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/_airpressure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp"
             android:paddingRight="10pt"
-            android:text="0" />
+            android:text="0"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
 
     </LinearLayout>
+    <!-- Gallons -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/_gallonslabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:text="Gallons"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
 
+        <TextView
+            android:id="@+id/_gallonsCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10pt"
+            android:text="0"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/_chlorineLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10pt"
+            android:text="Chlorine (mg/l)"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/_chlorineRate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10pt"
+            android:text="0"
+            android:textColor="@android:color/secondary_text_dark"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+    <!-- Receive Stuff -->
     <TextView
         android:id="@+id/receive_text"
         android:layout_width="match_parent"
@@ -341,8 +404,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:background="?android:attr/listDivider"
-        android:layout_height="2dp" />
+        android:layout_height="2dp"
+        android:background="?android:attr/listDivider" />
 
     <LinearLayout
         android:layout_width="match_parent"
