--- a/usbSerialExamples/src/main/res/values/colors.xml
+++ b/usbSerialExamples/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#949C29</color>
-    <color name="colorPrimaryDark">#61671B</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#D8E33B</color>
-
     <color name="colorRecieveText">#00FF00</color>
     <color name="colorSendText">#82CAFF</color>
     <color name="colorStatusText">#FFDB58</color>
+    <color name="RectangleNotSelected">#575843</color>
 </resources>
