general update working on send timeout

--- a/usbSerialExamples/src/main/res/values/dimens.xml
+++ b/usbSerialExamples/src/main/res/values/dimens.xml
@@ -2,5 +2,7 @@
 <resources>
     <dimen name="ModeText">20sp</dimen>
     <dimen name="minWidth">50sp</dimen>
-    <dimen name="RadioHight">60dp</dimen>
+    <dimen name="RadioHight">100dp</dimen>
+    <dimen name="GallonTextSize">15pt</dimen>
+    <dimen name="RadioButtonTextSize">20sp</dimen>
 </resources>
