--- a/usbSerialExamples/src/main/res/layout/fragment_terminal.xml
+++ b/usbSerialExamples/src/main/res/layout/fragment_terminal.xml
@@ -3,23 +3,79 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/AppTheme"
+    android:layout_marginStart="50sp"
     android:orientation="vertical">
+    <!--Mode Radio Group-->
+    <RadioGroup
+        android:id="@+id/main_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="visible">
 
+        <RadioButton
+            android:id="@+id/grav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="30sp"
+            android:textColor="@color/design_default_color_on_primary"
+            android:textSize="@dimen/RadioButtonTextSize"
+            android:text="Gravity Flow" />
+
+        <RadioButton
+            android:id="@+id/banr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="@dimen/minWidth"
+            android:layout_marginTop="20sp"
+            android:layout_marginBottom="20sp"
+            android:textSize="@dimen/RadioButtonTextSize"
+            android:text="ANR" />
+
+        <RadioButton
+            android:id="@+id/bbnr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/RadioButtonTextSize"
+            android:layout_marginBottom="20sp"
+            android:minWidth="@dimen/minWidth"
+            android:text="BNR" />
+
+        <RadioButton
+            android:id="@+id/bspy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/RadioButtonTextSize"
+            android:layout_marginBottom="20sp"
+            android:minWidth="@dimen/minWidth"
+            android:text="Spray" />
+
+        <RadioButton
+            android:id="@+id/bdrip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/RadioButtonTextSize"
+            android:layout_marginBottom="20sp"
+            android:minWidth="@dimen/minWidth"
+            android:text="Drip" />
+
+        <RadioButton
+            android:id="@+id/bdmd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/RadioButtonTextSize"
+            android:minWidth="@dimen/minWidth"
+            android:text="Demand" />
+    </RadioGroup>
+    <!--Time,Gallons -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:paddingTop="50sp"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/remoteTimeLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="10pt"
-            android:paddingEnd="10pt"
-            android:text="@string/_5l_time"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="30sp" />
-
+        <!--Time-->
         <TextView
             android:id="@+id/remoteTime"
             android:layout_width="wrap_content"
@@ -28,365 +84,32 @@
             android:paddingEnd="10pt"
             android:text="@string/time"
             android:textColor="@android:color/secondary_text_dark"
-            android:textSize="30sp" />
-
-    </LinearLayout>
-    <!--Control Lines (test mode)-->
-    <LinearLayout
-        android:layout_width="638dp"
-        android:layout_height="62dp"
-        android:orientation="horizontal">
-
-        <ToggleButton
-            android:id="@+id/controlLineTest"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/minWidth"
-            android:textSize="@dimen/ModeText"
-            android:clickable="true"
-            android:textOff="@string/test"
-            android:textOn="@string/test" />
-
-        <ToggleButton
-            android:id="@+id/controlLineHigh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/square_button"
-            android:minWidth="@dimen/minWidth"
-            android:textSize="@dimen/ModeText"
-            android:clickable="true"
-            android:textOff="@string/high"
-            android:textOn="@string/high"/>
-
-
-        <View
-            android:layout_width="6dp"
-            android:layout_height="match_parent" />
-
-        <ToggleButton
-            android:id="@+id/controlLineLow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/square_button"
-            android:minWidth="@dimen/minWidth"
-            android:textSize="@dimen/ModeText"
-            android:clickable="true"
-            android:textOff="Low"
-            android:textOn="Low" />
-
-        <ToggleButton
-            android:id="@+id/controlLineAlarm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/square_button"
-            android:minWidth="@dimen/minWidth"
-            android:textSize="@dimen/ModeText"
-            android:clickable="true"
-            android:textOff="Alarm"
-            android:textOn="Alarm" />
-
-        <View
-            android:layout_width="6dp"
-            android:layout_height="match_parent" />
-
-        <ToggleButton
-            android:id="@+id/controlLineCl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/square_button"
-            android:minWidth="@dimen/minWidth"
-            android:textSize="@dimen/ModeText"
-            android:clickable="true"
-            android:textOff="CL"
-            android:textOn="CL" />
-
-        <ToggleButton
-            android:id="@+id/controlLineWm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/square_button"
-            android:minWidth="@dimen/minWidth"
-            android:textSize="@dimen/ModeText"
-            android:clickable="true"
-            android:textOff="WM"
-            android:textOn="WM"  />
-
-    </LinearLayout>
-    <!--List Divider-->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="?android:attr/listDivider" />
-    <!--Mode Radio Group-->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="?android:attr/listDivider" />
-
-    <RadioGroup
-        android:id="@+id/_mode"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal"
-        android:visibility="visible">
-
-        <RadioButton
-            android:id="@+id/bOFF"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="30sp"
-            android:text="Off" />
-
-        <RadioButton
-            android:id="@+id/AnrBnr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/minWidth"
-            android:text="ANR" />
-
-        <RadioButton
-            android:id="@+id/NightSpray"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/minWidth"
-            android:text="Spray" />
-
-        <RadioButton
-            android:id="@+id/DripDisposal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/minWidth"
-            android:text="Drip" />
-
-        <RadioButton
-            android:id="@+id/OnDemmand"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="@dimen/minWidth"
-            android:text="Demand" />
-    </RadioGroup>
-    <!--Solenoids -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/_fieldFlush"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:justificationMode="none"
-            android:paddingRight="10pt"
-            android:text="Field Flush"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_recirculate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="20pt"
-            android:text="Recirculate"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_peristalic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Peristalic"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_effpump1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Eff Pump"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_effpump2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Alt Pump"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-    </LinearLayout>
-    <!--Input Signals-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/_bhigh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="20pt"
-            android:text="High"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <View
-            android:layout_width="6dp"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/_balarm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="20pt"
-            android:text="Extn Alarm"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_blow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Low"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <View
-            android:layout_width="6dp"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/_bcl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Chlorine"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <View
-            android:layout_width="6dp"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/_bwm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Water Meter "
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-    </LinearLayout>
-    <!--pumps and counts-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/_effluentlabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Effluent Cycles"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_effluentcount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="0"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_pumprunlabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Pump Runtime"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_pumprun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="0"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_airpressuelabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Air Pressure"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_airpressure"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="0"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-    <!-- Gallons -->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+            android:textSize="@dimen/GallonTextSize" />
         <TextView
             android:id="@+id/_gallonslabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="10dp"
-            android:text="Gallons"
+            android:paddingLeft="100pt"
+            android:paddingRight="10pt
+"
+            android:text="Tank Size Gallons"
             android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
+            android:textSize="@dimen/GallonTextSize" />
 
         <TextView
             android:id="@+id/GallonsValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="10pt"
             android:paddingRight="10pt"
-            android:text="0"
+            android:text="- - - - - "
             android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_chlorineLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="Chlorine (mg/l)"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/_chlorineRate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingRight="10pt"
-            android:text="0"
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="20sp" />
+            android:textSize="@dimen/GallonTextSize" />
 
     </LinearLayout>
     <!-- Receive Stuff -->
     <TextView
-        android:id="@+id/receive_text"
+        android:id="@+id/receiveText"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -397,37 +120,6 @@
         android:scrollbars="vertical"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:typeface="monospace" />
-
-    <Button
-        android:id="@+id/receive_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Read" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="?android:attr/listDivider" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/send_text"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:inputType="text|textNoSuggestions"
-            android:singleLine="true" />
-
-        <ImageButton
-            android:id="@+id/send_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_send_white_24dp" />
-    </LinearLayout>
 
 </LinearLayout>
 
