--- a/usbSerialExamples/src/main/res/values/styles.xml
+++ b/usbSerialExamples/src/main/res/values/styles.xml
@@ -11,5 +11,10 @@
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
     </style>
 
+    <style name="menu_text_style" parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/cardview_light_background</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
 </resources>
