adding hoot image

--- a/usbSerialExamples/src/main/res/layout/fragment_terminal.xml
+++ b/usbSerialExamples/src/main/res/layout/fragment_terminal.xml
@@ -150,5 +150,11 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:typeface="monospace" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="108dp"
+        android:layout_height="93dp"
+        app:srcCompat="@drawable/ic_action_name" />
+
 </LinearLayout>
 
